tests/src/frontend/syntax/invalid/invalid_modifier2.sk

class X {
  mymodifier fun foo(): void {}
}
